# notes

./: smooth_nn_intro.ipynb
parallel_nn/: fashionMNIST.ipynb  iris.ipynb  ogo.py  pyproject.toml  transformer.ipynb
